glibc (2.24-2) UNRELEASED; urgency=medium

  [ Samuel Thibault ]
  * hurd-i386/tg-gsync-libc.diff: Fix for glibc 2.24.

 -- Aurelien Jarno <aurel32@debian.org>  Wed, 31 Aug 2016 17:58:05 +0200

glibc (2.24-1) unstable; urgency=medium

  [ Adam Conrad ]
  * debian/rules.d/control.mk: Manually add binutils, linux-libc-dev, and the
    current GCC to the rebuild test deps, so they land in Testsuite-Triggers.

  [ Aurelien Jarno ]
  * debian/patches/git-updates.diff: update from upstream stable branch:
    - debian/patches/any/submitted-argp-attribute.diff: upstreamed.
    - Fix backtrace hang on armel/armhf, possibly causing a minor
      denial-of-service vulnerability (CVE-2016-6323).  Closes: #834752.
  * debian/control.in/libc: drop ${locale-compat:Depends} as it was not used
    anymore.
  * debian/control.in/libc, debian/rules.d/debhelper.mk: compute the
    linux-libc-dev dependency from the one installed at build time.  Closes:
    #834706.
  * debian/patches/series: apply hppa/submitted-setcontext.diff.  Closes:
    #835414.

  [ Samuel Thibault ]
  * patches/hurd-i386/cvs-adjtime-NULL.diff: New patch to fix crash on
    adjtime(..., NULL).

 -- Aurelien Jarno <aurel32@debian.org>  Wed, 31 Aug 2016 17:51:04 +0200

glibc (2.24-0experimental1) experimental; urgency=medium

  [ Samuel Thibault ]
  * testsuite-xfail-debian.mk: Update with hurd-i386 non-regressions.

  [ Aurelien Jarno ]
  * debian/patches/git-updates.diff: update from upstream stable branch:
    - debian/patches/powerpc/submitted-powerpc-ifunc-sel.diff: upstreamed.
    - debian/patches/sparc/submitted-sparc-fdim.diff: upstreamed.
  * debian/patches/sparc/cvs-test-strncmp.diff: new patch from upstream to
    fix wcsmbs/test-wcsncmp on architecture with strong alignment.  Closes:
    #825865.
  * debian/patches/testsuite-xfail-debian.mk: remove xfail-test-wcsncmp on
    sparc.
  * debian/sysdeps/{sparc,sparc64}.mk: force target to sparcv9-linux-gnu.