@@ -2,6 +2,7 @@ glibc (2.24-2) UNRELEASED; urgency=medium
 
   [ Samuel Thibault ]
   * hurd-i386/tg-gsync-libc.diff: Fix for glibc 2.24.
+  * testsuite-xfail-debian.mk: Update header conformance results.
 
  -- Aurelien Jarno <aurel32@debian.org>  Wed, 31 Aug 2016 17:58:05 +0200
 
